--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,39 @@
 </head>
 <body>
 
+    <header class="header">
+        <div class="container">
+            <div class="header__box">
+                <a href="#">
+                    <img src="images/logo.svg" alt="logo">
+                </a>
+                <nav class="navigation">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">Home</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">Feature</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">Pricing</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">Solution</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">Faq</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="sub__nav">
+                    <button class="sing">Sign in</button>
+                    <button class="down">Downlaod</button>
+                </div>
+            </div>
+        </div>
+    </header>
+
     
 
 
