--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,26 @@
         </div>
     </header>
 
+    <section class="hero">
+        <div class="container">
+            <div class="hero__box">
+                <div class="hero__text">
+                    <h1 class="hero__title">
+                        The best video online
+                        meeting software.
+                    </h1>
+                    <p class="hero__text">
+                        Many desktop publishing packages and web page editors now use Lorem Ipsum as their default
+                    </p>
+                    <button class="hero__btn">Start for free</button>
+                </div>
+                <div class="hero__img">
+                    <img src="images/hero.png" alt="hero-images">
+                </div>
+            </div>
+        </div>
+    </section>
+
     
 
 
