--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,42 @@
         </div>
     </section>
 
+    <section class="stut">
+        <div class="container">
+            <div class="stut__box">
+                <div class="title__box">
+                    <h1 class="stut__title">Collaborate 2M+ startup
+                        and international companies
+                        ueses since 2018 </h1>
+                </div>
+                <div class="stut__num">
+                    <div class="stut__popul">
+                        <p class="stut__popul-num">15k</p>
+                        <ul class="stut__list">
+                            <li><img src="images/heart.svg" alt="heart"></li>
+                            <li><img src="images/heart.svg" alt="heart"></li>
+                            <li><img src="images/heart.svg" alt="heart"></li>
+                            <li><img src="images/heart.svg" alt="heart"></li>
+                            <li><img src="images/heart.svg" alt="heart"></li>
+                        </ul>
+                        <p class="stut__popul-desc">Active Downloads</p>
+                    </div>
+                    <div class="stut__rait">
+                        <p class="stut__rait__num">4.9</p>
+                        <ul class="stut__list">
+                            <li><img src="images/star.svg" alt="heart"></li>
+                            <li><img src="images/star.svg" alt="heart"></li>
+                            <li><img src="images/star.svg" alt="heart"></li>
+                            <li><img src="images/star.svg" alt="heart"></li>
+                            <li><img src="images/star.svg" alt="heart"></li>
+                        </ul>
+                        <p class="stut__rait-data">2,938 Rating</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     
 
 
